--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -38,7 +38,7 @@
                         itemName: 'quantity'" type="text" autocomplete="off" placeholder="Qty." class="quantity" title="Number of Units for this line item. Will be multipled by price to calculate cost." /></td>
                     @*<td><select data-bind="value: unit, itemName: 'units'" class="unit" id="units"><option value="CS">CASE</option><option value="CT">CARTON</option><option value="DA">DAY</option><option value="EA">EACH</option></select></td>*@
                     <td data-bind="template: 'unit-of-measure-select-template'"></td>
-                    <td><input data-bind="value: catalogNumber, itemName: 'catalogNumber'" type="text" placeholder="Catalog #" class="catalog-num" title="Enter the vendor provided catalog number. Ex: NCC1701"></td>
+                    <td><input data-bind="value: catalogNumber, itemName: 'catalogNumber'" data-val="true"  data-val-length="Catalog can be up to 50 characters" data-val-length-max="50" maxlength="50" type="text" placeholder="Catalog #" class="catalog-num" title="Enter the vendor provided catalog number. Ex: NCC1701"></td>
                     <td><input data-bind="value: desc, lineValid: desc, itemName: 'description'" type="text" placeholder="Description" class="description" title="Just a friendly description to remember the item by later"></td>
                     <td><input data-bind="value: price, lineValid: price, valueUpdate: 'afterkeydown', css: { 'invalid-number-warning': price.hasError }, itemName: 'price'" type="text" autocomplete="off" placeholder="Price" class="price" title="Price per unit." style="float:left;">             
                     <span class="ui-state-default ui-corner-all ui-state-hover" style="float:right; margin:5px 0.1em 0;">                 
@@ -55,7 +55,7 @@
                                     <input data-bind="value: commodity, itemName: 'commodityCode'" type="text" placeholder="Commodity Code" class="search-commodity-code" />
                                 </td>
                                 <td class="label">URL:</td>
-                                <td><input data-bind="value: url, itemName: 'url'" class="url" placeholder="http://www.your-url.com" title="Enter a Url like http://www.google.com" style="width: 395px;" /></td>
+                                <td><input data-bind="value: url, itemName: 'url'" class="url" data-val="true"  data-val-length="Url can be up to 2000 characters" data-val-length-max="2000" maxlength="2000" placeholder="http://www.your-url.com" title="Enter a Url like http://www.google.com" style="width: 395px;" /></td>
                             </tr>
                             <tr>
                                 <td class="label">Notes:</td>
