Scaffolding for balloon tips on email preference views. Need to be reviews/updated.

--- a/Purchasing.Web/Views/User/EmailPreferences.cshtml
+++ b/Purchasing.Web/Views/User/EmailPreferences.cshtml
@@ -78,7 +78,7 @@
                     <div class="editor-label">
                         @Html.LabelFor(model => model.NotificationType)
                     </div>
-                    <div class="editor-field">
+                    <div class="editor-field showTip" title="">
                         @this.Select("NotificationType").Options(Enum.GetNames(typeof(EmailPreferences.NotificationTypes)).ToList()).Selected(Model.NotificationType.ToString())
                         @Html.ValidationMessageFor(model => model.NotificationType)
                     </div>
