--- a/Purchasing.Web/Views/User/_PurchaserPreferences.cshtml
+++ b/Purchasing.Web/Views/User/_PurchaserPreferences.cshtml
@@ -17,7 +17,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.PurchaserOrderCompleted)
                 </div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="">
                     @Html.EditorFor(model => model.PurchaserOrderCompleted)
                     @Html.ValidationMessageFor(model => model.PurchaserOrderCompleted)
                 </div>
@@ -26,7 +26,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.PurchaserOrderArrive)
                 </div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="">
                     @Html.EditorFor(model => model.PurchaserOrderArrive)
                     @Html.ValidationMessageFor(model => model.PurchaserOrderArrive)
                 </div>
@@ -35,7 +35,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.PurchaserKfsItemReceived)
                 </div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="">
                     @Html.EditorFor(model => model.PurchaserKfsItemReceived)
                     @Html.ValidationMessageFor(model => model.PurchaserKfsItemReceived)
                 </div>
@@ -44,7 +44,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.PurchaserPCardItemReceived)
                 </div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="">
                     @Html.EditorFor(model => model.PurchaserPCardItemReceived)
                     @Html.ValidationMessageFor(model => model.PurchaserPCardItemReceived)
                 </div>
@@ -53,7 +53,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.PurchaserCampusServicesItemReceived)
                 </div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="">
                     @Html.EditorFor(model => model.PurchaserCampusServicesItemReceived)
                     @Html.ValidationMessageFor(model => model.PurchaserCampusServicesItemReceived)
                 </div>
