--- a/Purchasing.Web/Views/User/_AccountManagerPreferences.cshtml
+++ b/Purchasing.Web/Views/User/_AccountManagerPreferences.cshtml
@@ -10,7 +10,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.AccountManagerPurchaserProcessed)
                 </div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="">
                     @Html.EditorFor(model => model.AccountManagerPurchaserProcessed)
                     @Html.ValidationMessageFor(model => model.AccountManagerPurchaserProcessed)
                 </div>
@@ -35,7 +35,7 @@
             </li>*@
             <li>
                 <div class="editor-label">@Html.LabelFor(model => model.AccountManagerOrderArrive)</div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="">
                     @Html.EditorFor(model => model.AccountManagerOrderArrive)
                     @Html.ValidationMessageFor(model => model.AccountManagerOrderArrive)
                 </div>
