--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -43,6 +43,70 @@
     @Html.Partial("_daRequest")
 }
 
+<section class="display-form">
+	<header class="ui-widget-header ui-corner-top">Org Details</header>
+
+    <div class="section-contents">
+        
+        @* <ul>
+            @foreach (var org in Model.Organizations)
+            {
+                <li>@org.Id
+                    <ul>
+                         @foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
+                         {
+                             <li>
+  
+                                 <div class="display-details">
+                                     @Html.Encode(email.Value)
+                                     @{
+                                         var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                                     }
+                                     <a class="button" href="@url" target="_blank">Lookup</a>
+
+                                 </div>
+                             </li>
+                         }      
+                    </ul>
+                </li>
+                
+            }
+        </ul>*@
+        
+         <dl>
+            @foreach (var org in Model.Organizations)
+            {
+                <dt>
+                    @Html.Encode(org.Id)
+                </dt>
+                    
+                             foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
+                             {
+                             <dd>
+  
+                                 <div class="display-details">
+                                     
+                                     @{
+                                            var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                                     }
+                                     <a class="button" href="@url" target="_blank">Lookup</a>
+                                     @Html.Encode(email.Value)
+                                 </div>
+                             </dd>
+                             }  
+                    
+                
+                
+            }
+        </dl>
+
+
+    </div>
+
+	<footer class="ui-corner-bottom"></footer>
+
+</section>
+
 
 
 
