--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -48,55 +48,29 @@
 
     <div class="section-contents">
         
-        @* <ul>
-            @foreach (var org in Model.Organizations)
-            {
-                <li>@org.Id
-                    <ul>
-                         @foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
-                         {
-                             <li>
-  
-                                 <div class="display-details">
-                                     @Html.Encode(email.Value)
-                                     @{
-                                         var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
-                                     }
-                                     <a class="button" href="@url" target="_blank">Lookup</a>
-
-                                 </div>
-                             </li>
-                         }      
-                    </ul>
-                </li>
-                
-            }
-        </ul>*@
-        
          <dl>
             @foreach (var org in Model.Organizations)
             {
+                var nameAndId = string.Format("{0} ({1})", org.Name, org.Id);
                 <dt>
-                    @Html.Encode(org.Id)
+                    <h2>@nameAndId</h2>
                 </dt>
                     
-                             foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
-                             {
-                             <dd>
+                foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
+                {
+                    <dd>
   
-                                 <div class="display-details">
+                        <div class="display-details">
                                      
-                                     @{
-                                            var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
-                                     }
-                                     <a class="button" href="@url" target="_blank">Lookup</a>
-                                     @Html.Encode(email.Value)
-                                 </div>
-                             </dd>
-                             }  
-                    
-                
-                
+                            @{
+                                var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                                var emailString = string.Format("mailto:{0}", email.Value);
+                            }
+                            <a class="button" href="@url" target="_blank">Lookup</a>
+                            <a href="@emailString">@Html.Encode(email.Value)</a>                                                       
+                        </div>
+                    </dd>
+                }
             }
         </dl>
 
