--- a/Purchasing.Web/Views/User/_ApproverPreferences.cshtml
+++ b/Purchasing.Web/Views/User/_ApproverPreferences.cshtml
@@ -9,12 +9,13 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.ApproverAccountManagerApproved)
                 </div>
-                <div class="editor-field showTip" title="Account manager edits an order you approved.">
+                <div class="editor-field showTip" title="Account manager approves an order you approved. Note: No email is generated when an account manager edits an order you approved.</br>You will always be notified when an order you approved has been denied.">
                     @Html.EditorFor(model => model.ApproverAccountManagerApproved)
                     @Html.ValidationMessageFor(model => model.ApproverAccountManagerApproved)
                 </div>
             </li>
-            <li>
+            @*this always happens when an order is denied*@
+@*            <li>
                 <div class="editor-label">
                     @Html.LabelFor(model => model.ApproverAccountManagerDenied)
                 </div>
@@ -22,7 +23,7 @@
                     @Html.EditorFor(model => model.ApproverAccountManagerDenied)
                     @Html.ValidationMessageFor(model => model.ApproverAccountManagerDenied)
                 </div>
-            </li>
+            </li>*@
             <li>
                 <div class="editor-label">
                     @Html.LabelFor(model => model.ApproverPurchaserProcessed)
@@ -41,7 +42,7 @@
                     @Html.ValidationMessageFor(model => model.ApproverKualiApproved)
                 </div>
             </li>*@
-            <li>
+@*            <li>
                 <div class="editor-label">
                     @Html.LabelFor(model => model.ApproverOrderCompleted)
                 </div>
@@ -49,10 +50,10 @@
                     @Html.EditorFor(model => model.ApproverOrderCompleted)
                     @Html.ValidationMessageFor(model => model.ApproverOrderCompleted)
                 </div>
-            </li>
+            </li>*@
             <li>
                 <div class="editor-label">@Html.LabelFor(model => model.ApproverOrderArrive)</div>
-                <div class="editor-field">
+                <div class="editor-field showTip" title="An order has arrived at your level for review. Note: If the order is assigned to any approver in the workgroup and someone else approves it, you will still get an email, but you will not be able to access the order.">
                     @Html.EditorFor(model=>model.ApproverOrderArrive)
                     @Html.ValidationMessageFor(model => model.ApproverOrderArrive)
                 </div>
