Extra checks on adding a non kfs vendor from within an order. Previously a vendor with an invalid email (or other fields) could be saved. Once this is in production we need to fix the data in the workgroup vendors table.

--- a/Purchasing.Web/Views/Order/_VendorDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_VendorDialog.cshtml
@@ -96,7 +96,7 @@
                     <div class="editor-label">
                         Email: @*<span class="required">*</span>*@</div>
                     <div class="editor-field">
-                        <input id="vendor-email" type="text" placeholder="Vendor Email" maxlength="50"/></div>
+                        <input id="vendor-email" type="email" placeholder="Vendor Email" data-val="true" data-val-email="Email address format not valid" data-val-length="Vendor Email can be up to 50 characters" data-val-length-max="50" maxlength="50"/></div>
                     <span class="field-validation-valid" data-valmsg-for="vendorEmail" data-valmsg-replace="true"></span>
                 </li>
                 <li>
