--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -161,7 +161,8 @@
                 }
                 
                 <li class="drop-down-menu">
-                    <a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues" id="help-link" target="_blank">Help</a>
+                    @*<a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues" id="help-link" target="_blank">Help</a>*@
+                    @Html.ActionLink("Help", "Index", "Help", new {}, new {@class="navigation-button"})
                 </li>
             </ul>
             <div style="clear: both;"></div>
