updated help page to match quick changes to prod

--- a/Purchasing.Web/Views/Help/Index.cshtml
+++ b/Purchasing.Web/Views/Help/Index.cshtml
@@ -3,54 +3,6 @@
 }
 
 
-@*<p>
-    This is a guide on how to get help with PrePurchasing.  Understanding the different levels of support will get you faster response.
-</p>
-
-<ul>
-    <li>Trying to figure out how to do something?</li>
-    <li>Have a great new idea to enhance PrePurchasing?</li>
-    <li>Having trouble performing an action or something not working as expected?</li>
-</ul>
-
-<div id="tips" class="container">
-    
-    <p>PrePurchasing is a very flexible program and has many options.  If you are trying to find out how to perform an action or why something is happening, please try the following before submitting a help ticket.</p>
-    
-    <ol>
-        <li>Check with your fellow purchasers, or your departmental admin.  Don't know who your departmental admin is?  <a href="#">Check Here</a></li>
-        <li>Search our knowledge base, we will be updating it with new articles to provide comprehensive answers to the most common questions.</li>
-        <li>If you are still unable to find the answer to your question, you can submit a ticket to our help desk.</li>
-    </ol>
-
-</div>
-
-<div id="ideas" class="container">
-    
-    <p>PrePurchasing has been designed help and ease the work required to order supplies and execute orders.  Through our User Voice forum, we maintain a list of suggestions for imrpovements by all of our users.  What can you do to make the system better?</p>
-    
-    <ul>
-        <li>Check with our User Voice forumn and vote for features you would like to see.</li>
-        <li>Don't see something you want or need?  Submit a new idea and we will review them as they come in.  We may not implement the change but getting more votes always help.</li>
-    </ul>
-    
-    <p>We will monitor and review all suggestions.  We take into account several factors before deciding what changes to implement.</p>
-    
-    <ul>
-        <li>How difficult is this request?</li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-
-</div>
-
-<div id="help" class="container">
-    
-    <p>Still not finding the answer to your questions?  Submit a help ticket.  Please note that tickets may be closed if it is not a support issue (ie. suggestion for improvement).</p>
-
-</div>*@
-
 <div id="top" class="container" style="width: 100%; font-weight: bold;">
     <p>
         Use the below links to get help and make suggestions to improve PrePurchasing.
@@ -77,10 +29,10 @@
 </section>
 <section id="support" class="container split">
     <header>
-        <a href="http://ucdavis.uservoice.com/knowledgebase">
+        @*<a href="http://ucdavis.uservoice.com/knowledgebase">
             <img src='@Url.Content("~/Images/knowledgebase.png")' alt="knowledge base"/>
-        </a>
-        <a href="">
+        </a>*@
+        <a href="http://ucdavis.uservoice.com/knowledgebase">
             <img src='@Url.Content("~/Images/gethelp.png")' alt="get help"/>
         </a>
     </header>
