--- a/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
@@ -29,11 +29,11 @@
 </li>
 <li>
     <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.SharedOrCluster)
+        @Html.LabelFor(model => model.Workgroup.IsFullFeatured)
     </div>
     <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.SharedOrCluster)
-        @Html.ValidationMessageFor(model => model.Workgroup.SharedOrCluster)
+        @Html.EditorFor(model => model.Workgroup.IsFullFeatured)
+        @Html.ValidationMessageFor(model => model.Workgroup.IsFullFeatured)
     </div>
 </li>
 <li>
