updated text on main landing

--- a/Purchasing.Web/Views/Home/Index.cshtml
+++ b/Purchasing.Web/Views/Home/Index.cshtml
@@ -171,15 +171,13 @@
                     </p>
                     
                     <p>
-                        For more information and how to obtain access, please refer to the <a href="http://ucdavis.github.com/Purchasing/index.html">PrePurchasing Application website</a>.
+                        For more information and how to obtain access, please refer to the <a href="http://ucdavis.github.com/Purchasing/index.html">PrePurchasing Application website</a> and fill out @Html.ActionLink("this request form.", "Create", "DepartmentalAdminRequest").
                     </p>
 
                     <p>
                         <strong>You must have a valid kerberos login and password to access this system.  Please contact your department prepurchasing administrator for permissions.</strong>
                     </p>
                     
-                    
-
                     <p>
                         @Html.ActionLink("Enter the PrePurchasing System", "Landing", "Home", new {}, new {@class="button"})
                     </p>
