don't allow a purchaser approval to be rerouted to a kerb for the purchaser even if there are external accounts. Instead, allow the purchaser to be rerouted to a list of purchasers who have access to it. Account managers approvals can still be rerouted useing a kerb

--- a/Purchasing.Web/Views/Order/_ReviewApprovals.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewApprovals.cshtml
@@ -33,15 +33,13 @@
                             @if (Model.CanEditOrder)
                             {
                                 <td>
-                                    @if (!approval.Completed && approval.StatusCode.Level == Model.Order.StatusCode.Level && Model.ExternalApprovals.Contains(approval))
+                                    @if (approval.StatusCode.Id == OrderStatusCode.Codes.Purchaser && (Model.Order.StatusCode.Id== OrderStatusCode.Codes.Purchaser || Model.Order.StatusCode.Id==OrderStatusCode.Codes.AccountManager))
+                                    {
+                                        @Html.ActionLink("Reroute Purchaser", "ReroutePurchaser", new { id = Model.Order.Id }, new { @Class = "button" }) 
+                                    } else if (!approval.Completed && approval.StatusCode.Level == Model.Order.StatusCode.Level && Model.ExternalApprovals.Contains(approval))
                                     {
                                         <a href="#" class="button reroute" data-approval-id="@approval.Id">ReRoute Approval</a>
-                                    @*<a href="#" class="button update" style="display:none;">Update</a>
-                                    <a href="#" class="button cancel" style="display:none;">Cancel</a>*@
-                                    } else if (approval.StatusCode.Id == OrderStatusCode.Codes.Purchaser && (Model.Order.StatusCode.Id== OrderStatusCode.Codes.Purchaser || Model.Order.StatusCode.Id==OrderStatusCode.Codes.AccountManager))
-                                           {
-                                                @Html.ActionLink("Reroute Purchaser", "ReroutePurchaser", new { id = Model.Order.Id }, new { @Class = "button" }) 
-                                           }
+                                    }  
                                 </td>
                             }
                         </tr>
