On a Dept Admin request, show any parent orgs with existing DA access. Same with Child Orgs

--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -46,17 +46,91 @@
 <section class="display-form">
 	<header class="ui-widget-header ui-corner-top">Org Details</header>
 
+<div class="section-contents">
+        
+    <dl>
+        @foreach (var org in Model.Organizations)
+        {
+            var nameAndId = string.Format("{0} ({1})", org.Name, org.Id);
+            <dt>
+                <h2>@nameAndId</h2>
+            </dt>
+                    
+            foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
+            {
+                <dd>
+  
+                    <div class="display-details">
+                                     
+                        @{
+                            var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                            var emailString = string.Format("mailto:{0}", email.Value);
+                        }
+                        <a class="button" href="@url" target="_blank">Lookup</a>
+                        <a href="@emailString">@Html.Encode(email.Value)</a>                                                       
+                    </div>
+                </dd>
+            }
+        }
+    </dl>
+
+
+</div>
+        <footer class="ui-corner-bottom"></footer>
+
+</section>
+    
+<section class="display-form">
+    <header class="ui-widget-header ui-corner-top">Child Organizations With Existing Users</header>
+
     <div class="section-contents">
         
-         <dl>
-            @foreach (var org in Model.Organizations)
+        <dl>
+            @foreach (var org in Model.OrganizationsWhithChildUsers)
             {
                 var nameAndId = string.Format("{0} ({1})", org.Name, org.Id);
                 <dt>
                     <h2>@nameAndId</h2>
                 </dt>
                     
-                foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
+                foreach (var email in Model.ChildOrgsExistingUsers.Where(a => a.Key == org.Id))
+                {
+                    <dd>
+  
+                        <div class="display-details">
+                                     
+                            @{
+                                var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                                var emailString = string.Format("mailto:{0}", email.Value);
+                            }
+                            <a class="button" href="@url" target="_blank">Lookup</a>
+                            <a href="@emailString">@Html.Encode(email.Value)</a>                                                       
+                        </div>
+                    </dd>
+                }
+            }
+        </dl>
+
+
+    </div>
+    <footer class="ui-corner-bottom"></footer>
+
+</section>
+
+<section class="display-form">
+    <header class="ui-widget-header ui-corner-top">Parent Organizations With Existing Users</header>
+
+    <div class="section-contents">
+        
+        <dl>
+            @foreach (var org in Model.OrganizationsWhithParentUsers)
+            {
+                var nameAndId = string.Format("{0} ({1})", org.Name, org.Id);
+                <dt>
+                    <h2>@nameAndId</h2>
+                </dt>
+                    
+                foreach (var email in Model.ParentOrgsExistingUsers.Where(a => a.Key == org.Id))
                 {
                     <dd>
   
@@ -77,7 +151,7 @@
 
     </div>
 
-	<footer class="ui-corner-bottom"></footer>
+    <footer class="ui-corner-bottom"></footer>
 
 </section>
 
