--- a/Purchasing.Web/Views/Order/_ReviewControlledSubstances.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewControlledSubstances.cshtml
@@ -13,6 +13,9 @@
             <li><div class="display-label">Class Schedule</div>
                 <div class="display-details">@cs.ClassSchedule</div>
             </li>
+            <li><div class="display-label">Pharmaceutical Grade</div>
+                <div class="display-details">@(@cs.PharmaceuticalGrade ? "Yes" : "No" )</div>
+            </li>
             <li><div class="display-label">Use</div>
                 <div class="display-details">@cs.Use</div>
             </li>
