--- a/Purchasing.Web/Views/Admin/UpdateChildWorkgroups.cshtml
+++ b/Purchasing.Web/Views/Admin/UpdateChildWorkgroups.cshtml
@@ -21,16 +21,19 @@
         $(function () {
             $("#updateAll").click(function () {
                 var url = '@Url.Action("ProcessWorkGroup")';
-                
-                $(".rowsToUpdate").each(function() {
+
+                $(".rowsToUpdate").each(function () {
                     var wgId = this.id;
                     var updateMessage = $("#" + wgId);
                     var antiforgery = $("input[name='__RequestVerificationToken']").val();
                     updateMessage.html("Processing");
+                    updateMessage.addClass("red");
                     $.post(url, { id: wgId, __RequestVerificationToken: antiforgery }, function (result) {
                         if (result) {
                             if (result.success == true) {
                                 updateMessage.html(result.message);
+                                updateMessage.removeClass("red");
+                                updateMessage.addClass("green");
                             } else {
                                 updateMessage.html("Error :" + result.message);
                             }
@@ -38,6 +41,26 @@
                             alert("There was a problem with workgroup " + wgId);
                         }
                     });
+                });
+            });
+
+            $(".getChildwg").click(function () {
+                var workgroupId = $(this).data("id");
+                var antiforgery = $("input[name='__RequestVerificationToken']").val();
+                var updateChildIds = $("#" + workgroupId + "_childIds");
+                var url = '@Url.Action("GetChildWorkgroupIds")';
+
+                updateChildIds.html("Fetching...");
+                $.post(url, { id: workgroupId, __RequestVerificationToken: antiforgery }, function (result) {
+                    if (result) {
+                        if (result.success == true) {
+                            updateChildIds.html(result.message);
+                        } else {
+                            updateChildIds.html("Error :" + result.message);
+                        }
+                    } else {
+                        alert("There was a problem with workgroup " + updateChildIds);
+                    }
                 });
             });
         });
@@ -59,6 +82,7 @@
             <th>
                 Status
             </th>
+            <th>Child Workgroup Ids</th>
         </tr>
 	</thead>
 	<tbody>
@@ -76,12 +100,15 @@
 				@item.IsFullFeatured
 			</td>		
 
-			<td id="@item.Id" class="rowsToUpdate">
+            <td id="@item.Id" class="rowsToUpdate">
 				
-			</td>
+            </td>
+
+            
+            <td id='@(string.Format("{0}_childIds", item.Id ))'><a data-id="@item.Id" href="#" class="button getChildwg">Child Workgroups</a></td>
 
 
-		</tr>
+        </tr>
     odd = !odd;
 }
 	</tbody>
