Testing version that uses view and code to get related workgroups. Code needs to be cleaned up in the workgroup service to just use the view once it has been tested.

--- a/Purchasing.Web/Views/Admin/ValidateChildWorkgroups.cshtml
+++ b/Purchasing.Web/Views/Admin/ValidateChildWorkgroups.cshtml
@@ -24,7 +24,7 @@
         <h3>Missing Child Permissions</h3>
         foreach (var missingChildPermission in item.MissingChildPermissions)
         {
-            <h4>@missingChildPermission.Id -- @missingChildPermission.Role.Id -- @missingChildPermission.User.Id -- @missingChildPermission.Id -- @missingChildPermission.IsFullFeatured</h4>
+            <h4>@missingChildPermission.Id -- @missingChildPermission.Role.Id -- @missingChildPermission.User.Id -- @missingChildPermission.Workgroup.Id -- @missingChildPermission.Workgroup.IsFullFeatured</h4>
         }
     }
 
